director id working in movies table

--- a/movie_web_app/templates/list_one_movie.html
+++ b/movie_web_app/templates/list_one_movie.html
@@ -18,10 +18,7 @@
         </tr>
         <tr>
             <td>Director</td>
-            <td>{% for director in movie.director %}
-                    {{director.director_full_name}},
-                {% endfor %}
-            </td>
+            <td>{{ movie.director.director_full_name }}</td>
         </tr>
         <tr>
             <td>Actors</td>
