--- a/movie_web_app/templates/list_browse_movies.html
+++ b/movie_web_app/templates/list_browse_movies.html
@@ -7,10 +7,10 @@
         <p>No matching movie.</p>
     {% else %}
         <p>Movies per page: 100</p>
-        {% if current_number == 0 %}
+        {% if current_number <= 0 %}
             <p style="display:inline">Previous page</p>
             <a href="http://localhost:5000/list/number={{current_number+1}}">Next page</a>
-        {% elif current_number == 9 %}
+        {% elif current_number >= 9 %}
             <a href="http://localhost:5000/list/number={{current_number-1}}">Previous page</a>
             <p style="display:inline">Next page</p>
         {% else %}
