review displays username

--- a/movie_web_app/templates/list_reviews.html
+++ b/movie_web_app/templates/list_reviews.html
@@ -14,7 +14,7 @@
         {% for review in reviews %}
             <tr>
                 <td>{{ review.movie }}</td>
-                <td>{{ review.user }}</td>
+                <td>{{ review.user.username }}</td>
                 <td>{{ review.review_text }}</td>
                 <td>{{ review.rating}}</td>
                 <td>{{ review.timestamp}}</td>
